# simple_chess

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
chess/: Cargo.toml  README.md
chess/src/: chess_game_builder.rs  color.rs  lib.rs
chess/src/codec/: binary.rs  forsyth_edwards_notation.rs
chess/src/piece/: mod.rs  rook.rs
chess_board/src/: board.rs  color.rs  lib.rs  piece.rs  square.rs
chess_board/tests/: integration_test.rs
chess_game/: Cargo.toml
chess_game/src/: chess_game.rs  chess_game_analyzer.rs  chess_game_builder.rs  chess_game_move_analyzer.rs  chess_game_state_analyzer.rs  chess_move.rs  color.rs  lib.rs
chess_pieces/: Cargo.toml
chess_pieces/src/: bishop.rs  color.rs  (+7 more)
game_board/: Cargo.toml  README.md
game_board/src/: board.rs  color.rs  lib.rs  piece.rs  square.rs
game_board/tests/: integration_test.rs
game_board/tests/model/: mod.rs
simple_chess/: Cargo.toml  README.md
simple_chess/src/: chess_game.rs  chess_game_builder.rs  chess_game_move_analyzer.rs  chess_game_state_analyzer.rs  chess_move.rs  color.rs  lib.rs
simple_chess/src/codec/: algebraic_notation.rs  binary.rs  forsyth_edwards_notation.rs  long_algebraic_notation.rs  mod.rs
simple_chess/src/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/: base_converter.rs  better_chess_game.rs  board.rs  board_square.rs  chess_board.rs  chess_board_square.rs  chess_game.rs  chess_move.rs  chess_piece.rs  color.rs  game.rs  game_analyser.rs  game_analyzer.rs  game_state.rs  graph.rs  lib.rs  main.rs  pieces.rs
(+17 files in other folders)
