[package]
name = "game_board"
description = "A rectangular game board of squares, for use in games like chess or checkers"
authors = ["Ian McNaughton <IanMcNaugh@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/imcnaugh/simple_chess/tree/main/game_board"
version = "1.0.5"
edition = "2021"

[dependencies]
