[package]
name = "simple_chess"
description = "A simple chess game implimentation"
authors = ["Ian McNaughton <IanMcNaugh@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/imcnaugh/simple_chess/tree/main/simple_chess"
version = "1.0.3"
edition = "2021"

[dependencies]
game_board = "1.0.2"
